--- a/faq.html
+++ b/faq.html
@@ -144,7 +144,7 @@
                                 <p class="text">
                                     Serverless Devs 开发者工具，可以根据需求进行 Serverless 源的配置，在下载和安装 Serverless Devs 之后，默认的源配置就是
                                     Serverless Regsitry，如果因为后期的一些原因，切换了该配置，可以通过以下命令进行切回：
-                                <pre>s set registry http://registry.devsapp.cn/simple</pre>
+                                <pre>s set registry https://registry.devsapp.cn/simple</pre>
                                 </p>
                             </div>
                         </div>
