fix: all Regsitry => Registry

--- a/faq.html
+++ b/faq.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--====== Title ======-->
-    <title> 常见问题 - Serverless Regsitry - Serverless package management platform </title>
+    <title> 常见问题 - Serverless Registry - Serverless package management platform </title>
     <!--====== Bootstrap css ======-->
     <link rel="stylesheet" href="static/css/bootstrap.min.css">
     <!--=== Owl-Carousel ===-->
@@ -143,7 +143,7 @@
                                 <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
                                         data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     <span></span>
-                                    在 Serverless Devs 开发者工具上，如何配置 Serverless Regsitry？
+                                    在 Serverless Devs 开发者工具上，如何配置 Serverless Registry？
                                 </button>
                             </h2>
                         </div>
@@ -152,7 +152,7 @@
                             <div class="card-body">
                                 <p class="text">
                                     Serverless Devs 开发者工具，可以根据需求进行 Serverless 源的配置，在下载和安装 Serverless Devs 之后，默认的源配置就是
-                                    Serverless Regsitry，如果因为后期的一些原因，切换了该配置，可以通过以下命令进行切回：
+                                    Serverless Registry，如果因为后期的一些原因，切换了该配置，可以通过以下命令进行切回：
                                 <pre>s set registry https://registry.devsapp.cn/simple</pre>
                                 </p>
                             </div>
@@ -165,7 +165,7 @@
                                         data-toggle="collapse" data-target="#collapseFive" aria-expanded="false"
                                         aria-controls="collapseFive">
                                     <span></span>
-                                    什么是 Serverless Regsitry？有没有比较容易理解的概念解释方法？
+                                    什么是 Serverless Registry？有没有比较容易理解的概念解释方法？
                                 </button>
                             </h2>
                         </div>
@@ -322,7 +322,7 @@
                                     Model，Serverless User Model 以及 Serverless Package Model。开发者可以基于这三个规范，进行相对应的能力的开发，例如：
                                 <li>
                                     Serverless Registry Model：通过该规范，开发者可以开发自己的 Serverless
-                                    Regsitry，只需要按照规范提供对外的接口，即可轻松实现与 Serverless Devs 工具的对接，完成私有源的建设；
+                                    Registry，只需要按照规范提供对外的接口，即可轻松实现与 Serverless Devs 工具的对接，完成私有源的建设；
                                 </li>
                                 <li>
                                     Serverless User Model：通过该规范，开发者可以基于 Serverless Devs Model 规范开发属于自己的 Serverless
@@ -330,7 +330,7 @@
                                 </li>
                                 <li>
                                     Serverless Package Model：通过该规范，开发者可以以贡献者身份，开发应用案例、组件、插件等相关内容，并发布到 Serverless
-                                    Regsitry，供更多人学习和使用，进一步繁荣 Serverless 社区生态；
+                                    Registry，供更多人学习和使用，进一步繁荣 Serverless 社区生态；
                                 </li>
                                 </p>
                             </div>
@@ -351,7 +351,7 @@
                              data-parent="#accordionExample">
                             <div class="card-body">
                                 <p class="text">
-                                    目前 Serverless Devs 的官方源是 Serverless Regsitry，除此之外，系统中还有 GitHub 源和 Gitee
+                                    目前 Serverless Devs 的官方源是 Serverless Registry，除此之外，系统中还有 GitHub 源和 Gitee
                                     源，开发者可以通过以下命令进行选择和切换：
                                 <pre>s set registry</pre>
                                 关于其他更多的源，目前还没有统一记录，但是如果有小伙伴开发了自己的源，想要贡献给社区，可以在Serverless Devs 下发一个 <a
@@ -377,15 +377,15 @@
                             <div class="card-body">
                                 <p class="text">
                                     当开发者以贡献者身份，开发完成符合 Serverless Package Model 规范的 Package 后，可以通过 Serverless Devs 的
-                                    Regsitry 组件进行发布。具体文章可以参考：<br>
+                                    Registry 组件进行发布。具体文章可以参考：<br>
                                     文章：<a href="https://github.com/Serverless-Devs/Serverless-Devs/discussions/439"
-                                          target="_blank">快速完成 Serverless Devs 应用开发并发布到 Regsitry</a><br>
+                                          target="_blank">快速完成 Serverless Devs 应用开发并发布到 Registry</a><br>
                                     视频：
                                     <a href="https://example-static.oss-cn-beijing.aliyuncs.com/video/202203231823.mp4"
                                        class="popup mfp-iframe video-button">
                                         点击 <i class="fas fa-play"></i> 可以播放视频
                                     </a><br>
-                                    除此之外还可以参考 <a href="https://github.com/Serverless-Devs/registry">Regsitry 组件</a>所提供的各种能力。
+                                    除此之外还可以参考 <a href="https://github.com/Serverless-Devs/registry">Registry 组件</a>所提供的各种能力。
 
                                 </p>
                             </div>
@@ -406,9 +406,9 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="footer-box one">
                     <div class="logo">
-                        <h1 style="color: white">Serverless Regsitry</h1>
+                        <h1 style="color: white">Serverless Registry</h1>
                     </div>
-                    <p class="text">Serverless Regsitry 是 Serverless Devs 社区的衍生品，遵循 Serverless Devs Model 规范，为打造
+                    <p class="text">Serverless Registry 是 Serverless Devs 社区的衍生品，遵循 Serverless Devs Model 规范，为打造
                         Serverless 生态基础，繁荣 Serverless 开源生态而努力。正在为成为好用的 Serverless 领域的 NPM，Pypi ... 而努力。 </p>
 
                     <div class="social">
