[Severless官网] 插件页面接口支持V3接口

--- a/details.html
+++ b/details.html
@@ -728,8 +728,7 @@
           }
          if (tempData.body) {
           tempData = tempData.body
-          console.log('tempData')
-          console.log(tempData)
+          // console.log('tempData')
           if (typeof tempData === 'string') {
             renderTpl('titleTpl', 
             { 
