--- a/details.html
+++ b/details.html
@@ -769,7 +769,7 @@
                 renderTpl(
                   "titleTpl",
                   {
-                    name: "aliyun_oss_bucket",
+                    name: getQueryVariable("name"),
                     createTime: undefined,
                     version: undefined,
                     package_type: "v3",
