--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-
+    <!-- bing validation -->
+    <meta name="msvalidate.01" content="44319F9675676357716A86315318B93E" />
+    <!-- ziyuan.baidu validation -->
+    <meta name="baidu-site-verification" content="codeva-SkzOZK7XVT" />
     <!--====== Title ======-->
     <title>Serverless Registry: Serverless 包管理平台</title>
     <!--====== Bootstrap css ======-->
